# auraos

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
agent/: Cargo.toml
agent/src/: backend.rs  main.rs  memory.rs  tools.rs
boot/: linker-qemu-virt.ld
docs/: agent-core.md  architecture.md  expected-qemu-serial.txt  glossary.md  hardware-port-pi5.md  hardware.md  learning-course.md  learning-path.md  updates-4y.md  verified-boot.md
kernel/: Cargo.toml  aarch64-auraos.json  aarch64-qemu.ld  build.rs
kernel/.cargo/: config.toml
kernel/src/: arch.rs  board_pi5.rs  bootinfo.rs  console.rs  cpio.rs  display.rs  elf.rs  exceptions.rs  fdt.rs  frame.rs  gic.rs  guest_blobs.rs  ipc.rs  main.rs  mem.rs  ota.rs  ota_crypto.rs  process.rs  sched.rs  syscall.rs  timer.rs  trap.rs  uart.rs  userspace.rs  vb.rs  virtio.rs  vm.rs
ota/: README.md  apply_update.md  channels.json  slots.json
ota/dev-keys/: README.md
ota/fixtures/: signed-agent.json  signed-ed25519-soft-os.json  signed-models.json  signed-os.json  signed-sha256-dev-os.json  unsigned-agent.json  unsigned-models.json  unsigned-os.json
scripts/: build-kernel.ps1  build-kernel.sh  fix-linker.ps1  pack-initrd.ps1  pack-initrd.sh  prepare-ab-disk.ps1  run-qemu-gui.ps1  run-qemu.ps1  run-qemu.sh  verify-ota.ps1
shared/: Cargo.toml
shared/src/: ipc.rs  lib.rs  ota.rs  tools.rs  trust.rs
tools/kboot/: Cargo.toml
tools/ota-verify/: Cargo.toml
tools/ota-verify/src/: main.rs
userspace/guest/: Cargo.toml  user.ld
userspace/guest/.cargo/: config.toml
userspace/guest/src/: agent_ipc.rs  lib.rs
userspace/init/: Cargo.toml
userspace/init/src/: main.rs
userspace/shell/: Cargo.toml
userspace/shell/src/: framebuffer.rs  main.rs  ui.rs
