[workspace]
resolver = "2"
members = [
    "kernel",
    "agent",
    "userspace/init",
    "userspace/shell",
    "shared",
]
default-members = ["agent", "userspace/init", "userspace/shell", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["AuraOS Contributors"]

[workspace.dependencies]
shared = { path = "shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "sync", "time", "fs", "signal", "process"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio", "http1"] }
hyper-tls = "0.6"
