[package]
name = "aura-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AuraOS Agent Core — privileged system AI service"

[[bin]]
name = "aura-agent"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-tls = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
