[package]
name = "aura-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AuraOS monolithic teaching kernel for QEMU aarch64 virt"

[[bin]]
name = "aura-kernel"
path = "src/main.rs"

[dependencies]
# Soft ed25519 verify (SCRUM-49). Pure Rust, no build script; default-features off → no_std.
ed25519-compact = { version = "2.3.1", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
