[package]
name = "shared"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AuraOS shared IPC protocol, tool schemas, and OTA metadata"

[dependencies]
ed25519-compact = { version = "2.3.1", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
